--- a/resource.qrc
+++ b/resource.qrc
@@ -8,7 +8,6 @@
         <file>img/login_vaccine.png</file>
         <file>img/vaccine1.png</file>
         <file>img/hands-2847508_1920.jpg</file>
-        <file>img/CoviCURE.png</file>
         <file>img/test.png</file>
         <file>img/background1.jpg</file>
         <file>img/background2.jpg</file>
@@ -16,5 +15,9 @@
         <file>img/hosp.png</file>
         <file>img/med.png</file>
         <file>img/FreeVector-Geometric-Mesh-Pattern.jpg</file>
+        <file>img/CoviCUREpng.png</file>
+        <file>img/Untitled drawing.png</file>
+        <file>img/CoviCURE.png</file>
+        <file>img/final.png</file>
     </qresource>
 </RCC>
