--- a/Forms/Main/mainwindow.ui
+++ b/Forms/Main/mainwindow.ui
@@ -14,21 +14,21 @@
    <string>MainWindow</string>
   </property>
   <property name="styleSheet">
-   <string notr="true"/>
+   <string notr="true">background-color: rgb(173, 181, 189);</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <widget class="QGroupBox" name="groupBox">
     <property name="geometry">
      <rect>
-      <x>310</x>
-      <y>100</y>
-      <width>671</width>
-      <height>541</height>
+      <x>280</x>
+      <y>70</y>
+      <width>731</width>
+      <height>561</height>
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">background-color: qlineargradient(spread:reflect, x1:0, y1:0, x2:1, y2:1, stop:0 rgba(0, 255, 244, 255), stop:1 rgba(255, 0, 106, 255));
-border-radius: 10px;</string>
+     <string notr="true">background-color: qlineargradient(spread:reflect, x1:0, y1:0, x2:1, y2:1, stop:0 rgba(0, 213, 255, 255), stop:1 rgba(255, 0, 106, 255));
+border-radius: 20px;</string>
     </property>
     <property name="title">
      <string/>
@@ -36,8 +36,8 @@ border-radius: 10px;</string>
     <widget class="QPushButton" name="pushButton_Signup_3">
      <property name="geometry">
       <rect>
-       <x>140</x>
-       <y>250</y>
+       <x>170</x>
+       <y>260</y>
        <width>381</width>
        <height>61</height>
       </rect>
@@ -69,8 +69,8 @@ color: rgb(255, 255, 255);</string>
     <widget class="QPushButton" name="pushButton_Login_3">
      <property name="geometry">
       <rect>
-       <x>140</x>
-       <y>340</y>
+       <x>170</x>
+       <y>360</y>
        <width>381</width>
        <height>61</height>
       </rect>
@@ -102,8 +102,8 @@ color: rgb(255, 255, 255);</string>
     <widget class="QPushButton" name="pushButton_Exit_3">
      <property name="geometry">
       <rect>
-       <x>140</x>
-       <y>430</y>
+       <x>170</x>
+       <y>460</y>
        <width>381</width>
        <height>59</height>
       </rect>
@@ -122,9 +122,8 @@ color: rgb(255, 255, 255);</string>
       </font>
      </property>
      <property name="styleSheet">
-      <string notr="true">background-color: qlineargradient(spread:reflect, x1:0, y1:0, x2:1, y2:1, stop:0 rgba(255, 255, 255, 255), stop:0.629213 rgba(84, 154, 232, 255));
+      <string notr="true">background-color: qlineargradient(spread:reflect, x1:0, y1:0, x2:1, y2:1, stop:0 rgba(255, 229, 131, 255), stop:0.710227 rgba(255, 0, 0, 255));
 font: 14pt &quot;Arial Rounded MT Bold&quot;;
-
 border-radius: 5px;
 color: rgb(255, 255, 255);</string>
      </property>
@@ -135,10 +134,10 @@ color: rgb(255, 255, 255);</string>
     <widget class="QLabel" name="label">
      <property name="geometry">
       <rect>
-       <x>50</x>
+       <x>40</x>
        <y>40</y>
-       <width>581</width>
-       <height>141</height>
+       <width>651</width>
+       <height>171</height>
       </rect>
      </property>
      <property name="font">
@@ -162,7 +161,7 @@ color: rgb(255, 255, 255);
 </string>
      </property>
      <property name="text">
-      <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;!! NAMASTE !!&lt;/p&gt;&lt;p&gt;Welcome to CoviCURE&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+      <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:36pt; font-weight:700;&quot;&gt;!! NAMASTE !!&lt;/span&gt;&lt;/p&gt;&lt;p&gt;&lt;span style=&quot; font-size:36pt; font-weight:400;&quot;&gt;Welcome to CoviCURE&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
      </property>
      <property name="alignment">
       <set>Qt::AlignCenter</set>
